[package]
name = "rust-os"
version = "0.1.0"
edition = "2021"
authors = ["Dyson Dyson <dyson.dyson@icloud.com>"]
repository = "https://github.com/DoctorDalek1963/rust-os"
license = "GPL-3.0-only"
publish = false

[dependencies]
bootloader = "0.9"
lazy_static = { version = "1.5", features = ["spin_no_std"] }
spin = "0.9"
volatile = "0.2"
