[package]
name = "rust-os"
version = "0.1.0"
edition = "2021"
authors = ["Dyson Dyson <dyson.dyson@icloud.com>"]
repository = "https://github.com/DoctorDalek1963/rust-os"
license = "GPL-3.0-only"
publish = false

[dependencies]
bootloader = "0.9"
lazy_static = { version = "1.5", features = ["spin_no_std"] }
spin = "0.9"
volatile = "0.2"
x86_64 = "0.15.1"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 33                                       # (0x10 << 1) | 1
